--- a/Testng-Automation/test-output/emailable-report.html
+++ b/Testng-Automation/test-output/emailable-report.html
@@ -8,13 +8,19 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">98</td><td></td><td></td></tr>
+<tr><th colspan="8">testcases</th></tr>
+<tr><td><a href="#t0">users</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">66</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">products</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">6</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">74</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.sgtesting.products.Products</td><td><a href="#m0">createProduct</a></td><td rowspan="1">1682940140504</td><td rowspan="1">10</td></tr><tr class="passedeven"><td><a href="#m1">deleteProduct</a></td><td rowspan="1">1682940140522</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">modifyProduct</a></td><td rowspan="1">1682940140526</td><td rowspan="1">3</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">testcases</th></tr></tbody><tbody id="t0"><tr><th colspan="4">users &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.sgtesting.users.Users</td><td><a href="#m0">createUser</a></td><td rowspan="1">1682944075625</td><td rowspan="1">7</td></tr><tr class="passedeven"><td><a href="#m1">deleteUser</a></td><td rowspan="1">1682944075636</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">modifyUser</a></td><td rowspan="1">1682944075638</td><td rowspan="1">1</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">products &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.sgtesting.products.Products</td><td><a href="#m3">createProduct</a></td><td rowspan="1">1682944075739</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m4">deleteProduct</a></td><td rowspan="1">1682944075741</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m5">modifyProduct</a></td><td rowspan="1">1682944075743</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.sgtesting.products.Products#createProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.sgtesting.products.Products#deleteProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.sgtesting.products.Products#modifyProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>users</h2><h3 id="m0">com.sgtesting.users.Users#createUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.sgtesting.users.Users#deleteUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.sgtesting.users.Users#modifyUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>products</h2><h3 id="m3">com.sgtesting.products.Products#createProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.sgtesting.products.Products#deleteProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.sgtesting.products.Products#modifyProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
